Fixed auto height bug on Firefox where the banner would fill 100% height

--- a/website/macos-big-sur-icons/src/components/app.less
+++ b/website/macos-big-sur-icons/src/components/app.less
@@ -40,6 +40,7 @@ a{
 
 .fit-width{
     width: fit-content;
+    width: -moz-fit-content;
 }
 
 .coral--dark {
@@ -299,6 +300,7 @@ select{
 
 .twitter-handle-wrapper span{
     height: fit-content;
+    height: -moz-fit-content;
     margin: auto
 }
 
@@ -386,6 +388,7 @@ option[value=""][disabled] {
 .header-wrapper{
     display: grid;
     height: fit-content;
+    height: -moz-fit-content;
     padding: 30px 30px 15px 30px;
     grid-template-columns: auto auto;
     justify-content: space-between;
@@ -463,6 +466,7 @@ option[value=""][disabled] {
 .header-grid-btns > div{
     // padding-left: 15px;
     height: fit-content;
+    height: -moz-fit-content;
     margin: auto;
 }
 
@@ -477,6 +481,7 @@ option[value=""][disabled] {
 .header-icon-wrapper{
     position: absolute;
     height: fit-content;
+    height: -moz-fit-content;
     left: 50%;
     transform: translateX(-50%);
 }
@@ -742,6 +747,7 @@ option[value=""][disabled] {
     // transform : translateX(-50%);
     // width: 100%;
     height: fit-content;
+    height: -moz-fit-content;
     // display: table-row;
 }
 
@@ -940,6 +946,7 @@ option[value=""][disabled] {
     transform: translate(-50%, -50%);
     padding: 20px;
     height: fit-content;
+    height: -moz-fit-content;
     border-radius: 4px;
     background: rgb(50, 50, 50);
 }
@@ -1092,6 +1099,7 @@ option[value=""][disabled] {
     grid-template-columns: 1fr 1fr;
     gap: 25px;
     height: fit-content;
+    height: -moz-fit-content;
     // padding-top: 25px;
 }
 
@@ -1117,6 +1125,7 @@ option[value=""][disabled] {
     grid-template-columns: 1fr;
     row-gap: 10px;
     height: fit-content;
+    height: -moz-fit-content;
     top: 50%;
     position: relative;
     transform: translateY(-50%);
@@ -1437,6 +1446,7 @@ option[value=""][disabled] {
     display: grid;
     grid-template-columns: 18px auto;
     height: fit-content;
+    height: -moz-fit-content;
     gap: 7px;
     padding: 8px 13px 8px 10px;
     margin: 0px;
@@ -1458,6 +1468,7 @@ option[value=""][disabled] {
     font-weight: 400;
     font-style: normal;
     height: fit-content;
+    height: -moz-fit-content;
     line-height: 99%;
 }
 
@@ -1789,8 +1800,6 @@ option[value=""][disabled] {
     
     .header-wrapper{
         align-items: center;
-        // grid-template-columns: auto;
-        // width: fit-content;
     }
     
     .header-grid-btns {
